--- a/mongodb-replicaset/docker-compose.yml
+++ b/mongodb-replicaset/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2'
 services:
-  mongo-db01:
-    name: mongo-db01
+  mongodb-db01:
     image: mongo:3.2
+    restart: always
     environment:
       - "MONGO_INITDB_ROOT_USERNAME=mongo"
       - "MONGO_INITDB_ROOT_PASSWORD=123456"
@@ -12,8 +12,7 @@ services:
       - "db01-data:/data/db"
     command: --replSet mongo-replicaset
 
-  mongo-db02:
-    name: mongo-db02
+  mongodb-db02:
     image: mongo:3.2
     environment:
       - "MONGO_INITDB_ROOT_USERNAME=mongo"
@@ -24,8 +23,7 @@ services:
       - "db02-data:/data/db"
     command: --replSet mongo-replicaset
 
-  mongo-db03:
-    name: mongo-db03
+  mongodb-db03:
     image: mongo:3.2
     environment:
       - "MONGO_INITDB_ROOT_USERNAME=mongo"
