--- a/openldap/docker-compose.yml
+++ b/openldap/docker-compose.yml
@@ -2,28 +2,40 @@ version: '2'
 
 services:
   openldap:
-    hostname: openldap
+    image: osixia/openldap:1.2.4
     container_name: openldap
-    image: osixia/openldap
     ports:
     - "10389:389"
     - "10636:636"
-    volumes:
-    - /home/sunday/workspace/docker/data/openldap/ldapdata:/var/lib/ldap
-    - /home/sunday/workspace/docker/data/openldap/ldapcfg:/etc/ldap/slapd.d
+    #volumes:
+    #- /home/sunday/workspace/docker/data/openldap/ldapdata:/var/lib/ldap
+    #- /home/sunday/workspace/docker/data/openldap/ldapcfg:/etc/ldap/slapd.d
     environment:
-    - LDAP_ORGANISATION="zhougames"
-    - LDAP_DOMAIN="zhougames.com"
-    - LDAP_ADMIN_PASSWORD="admin"
-    - LDAP_CONFIG_PASSWORD="config"
+      LDAP_ORGANISATION: "zhougames"
+      LDAP_DOMAIN: "zhougames.com"
+      LDAP_ADMIN_PASSWORD: "admin"
+      LDAP_CONFIG_PASSWORD: "config"
+    #domainname: "zhougames.org" # important: same as hostname
+    #hostname: "zhougames.org"
 
   lam:
     hostname: lam
     container_name: lam
     image: zhangsean/lam
-    depends_on:
-    - openldap
     ports:
       - "10081:80"
+    depends_on:
+    - openldap
+
+  phpldapadmin:
+    image: osixia/phpldapadmin:latest
+    container_name: phpldapadmin
+    environment:
+      PHPLDAPADMIN_LDAP_HOSTS: "openldap"
+      PHPLDAPADMIN_HTTPS: "false"
+    ports:
+      - "10080:80"
+    depends_on:
+      - openldap
 
 
