--- a/openldap/docker-compose.yml
+++ b/openldap/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       LDAP_DOMAIN: "zhougames.com"
       LDAP_ADMIN_PASSWORD: "admin"
       LDAP_CONFIG_PASSWORD: "config"
+      LDAP_READONLY_USER: "false"
+      LDAP_READONLY_USER_USERNAME: "readonly"
+      LDAP_READONLY_USER_PASSWORD: "readonly"
     #domainname: "zhougames.org" # important: same as hostname
     #hostname: "zhougames.org"
 
