--- a/openldap/docker-compose.yml
+++ b/openldap/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       LDAP_DOMAIN: "zhougames.com"
       LDAP_ADMIN_PASSWORD: "admin"
       LDAP_CONFIG_PASSWORD: "config"
-      LDAP_READONLY_USER: "false"
+      LDAP_READONLY_USER: "true"
       LDAP_READONLY_USER_USERNAME: "readonly"
       LDAP_READONLY_USER_PASSWORD: "readonly"
     #domainname: "zhougames.org" # important: same as hostname
