--- a/openldap/docker-compose.yml
+++ b/openldap/docker-compose.yml
@@ -11,15 +11,15 @@ services:
     #- /home/sunday/workspace/docker/data/openldap/ldapdata:/var/lib/ldap
     #- /home/sunday/workspace/docker/data/openldap/ldapcfg:/etc/ldap/slapd.d
     environment:
-      LDAP_ORGANISATION: "zhougames"
-      LDAP_DOMAIN: "zhougames.com"
+      LDAP_ORGANISATION: "sunday"
+      LDAP_DOMAIN: "sunday.local"
       LDAP_ADMIN_PASSWORD: "admin"
       LDAP_CONFIG_PASSWORD: "config"
       LDAP_READONLY_USER: "true"
       LDAP_READONLY_USER_USERNAME: "readonly"
       LDAP_READONLY_USER_PASSWORD: "readonly"
-    #domainname: "zhougames.org" # important: same as hostname
-    #hostname: "zhougames.org"
+    #domainname: "sunday.local" # important: same as hostname
+    #hostname: "sunday.local"
 
   lam:
     hostname: lam
