--- a/openldap/docker-compose.yml
+++ b/openldap/docker-compose.yml
@@ -4,12 +4,6 @@ services:
   openldap:
     image: osixia/openldap:1.2.4
     container_name: openldap
-    ports:
-    - "10389:389"
-    - "10636:636"
-    #volumes:
-    #- /home/sunday/workspace/docker/data/openldap/ldapdata:/var/lib/ldap
-    #- /home/sunday/workspace/docker/data/openldap/ldapcfg:/etc/ldap/slapd.d
     environment:
       LDAP_ORGANISATION: "sunday"
       LDAP_DOMAIN: "sunday.local"
@@ -18,27 +12,51 @@ services:
       LDAP_READONLY_USER: "true"
       LDAP_READONLY_USER_USERNAME: "readonly"
       LDAP_READONLY_USER_PASSWORD: "readonly"
-    #domainname: "sunday.local" # important: same as hostname
-    #hostname: "sunday.local"
+      LDAP_BACKEND: "mdb"
+      LDAP_TLS: "true"
+      LDAP_TLS_CRT_FILENAME: "ldap.pem"
+      LDAP_TLS_KEY_FILENAME: "ldap-key.pem"
+      LDAP_TLS_CA_CRT_FILENAME: "ca.pem"
+      LDAP_TLS_ENFORCE: "true"
+      LDAP_TLS_CIPHER_SUITE: "SECURE256:-VERS-SSL3.0"
+      LDAP_TLS_PROTOCOL_MIN: "3.1"
+      LDAP_TLS_VERIFY_CLIENT: "try"
+      LDAP_REPLICATION: "false"
+      KEEP_EXISTING_CONFIG: "false"
+      LDAP_REMOVE_CONFIG_AFTER_SETUP: "true"
+      LDAP_SSL_HELPER_PREFIX: "ldap"
+    tty: true
+    stdin_open: true
+    volumes:
+      - ./ldapdata:/var/lib/ldap
+      - ./ldapconf:/etc/ldap/slapd.d
+      - ./cert:/container/service/slapd/assets/certs/
+    ports:
+      - "10389:389"
+      - "10636:636"
+    domainname: "sunday.local" # important: same as hostname
+    hostname: "sunday.local"
 
   lam:
     hostname: lam
     container_name: lam
     image: zhangsean/lam
+    #volumes:
+    #  - ./lamconf:/var/www/html/config
     ports:
       - "10081:80"
     depends_on:
     - openldap
 
-  phpldapadmin:
-    image: osixia/phpldapadmin:latest
-    container_name: phpldapadmin
-    environment:
-      PHPLDAPADMIN_LDAP_HOSTS: "openldap"
-      PHPLDAPADMIN_HTTPS: "false"
-    ports:
-      - "10080:80"
-    depends_on:
-      - openldap
+#  phpldapadmin:
+#    image: osixia/phpldapadmin:latest
+#    container_name: phpldapadmin
+#    environment:
+#      PHPLDAPADMIN_LDAP_HOSTS: "openldap"
+#      PHPLDAPADMIN_HTTPS: "false"
+#    ports:
+#      - "10080:80"
+#    depends_on:
+#      - openldap
 
 
