--- a/mysql/mysql/docker-compose.yml
+++ b/mysql/mysql/docker-compose.yml
@@ -3,11 +3,12 @@ version: '2'
 services:
   mysql57:
     image: mysql:5.7
+    #container_name: mysql5.7
     environment:
     - MYSQL_ROOT_PASSWORD=123456
-    - MYSQL_USER=kbe
-    - MYSQL_PASSWORD=pwd123456
-    - MYSQL_DATABASE=kbe
+    - MYSQL_USER=sunday
+    - MYSQL_PASSWORD=123456
+    - MYSQL_DATABASE=test
     hostname: mysql
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
@@ -15,5 +16,5 @@ services:
     - /home/sunday/workspace/docker/data/mysql/mysql57/data:/var/lib/mysql:Z
     - /home/sunday/workspace/docker/data/mysql/mysql57/log:/var/log/mysql:Z
     ports:
-    - 33306:3306
+    - 3306:3306
 
