修改本地redis默认数据地址

--- a/base/redis/docker-compose.yml
+++ b/base/redis/docker-compose.yml
@@ -4,4 +4,4 @@ redis:
   ports:
     - "6379:6379"
   volumes:
-    - ./data:/data
+    - "/home/sunday/workspace/docker/data/base/redis/data:/data"
